# icp-subaccount-indexer

./: .env.template  .env.test  .gitignore  .gitmodules  CANISTER_MANAGEMENT_COMMANDS.md  CLAUDE.md  Cargo.toml  README.md  TESTING_ATTEMPT.md  TESTING_GUIDE.md  TESTING_LOCAL.md  WORKSPACE.md  canister_ids.json  devnet_canister_ids.json  dfx.json  dfx.local.json  mainnet_canister_ids.json  old_mainnet_canister_ids.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-local.sh
.github/workflows/: build-and-test.yml  ci.yml  release.yml  test-icsi-lib.yml
.maintain/: DEPRECATED.md  README.md  deploy-mainnet.sh  deploy.sh  test.sh
.maintain/legacy/: deploy.sh  test.sh
.maintain/legacy/script/: pnpm-lock.yaml
.maintain/script/: .env.sample  README.md  index.js  package-lock.json  package.json
docs/: CANISTER_DEBUGGING_GUIDE.md  DEVNET_DEBUGGING_GUIDE.md  SUBACCOUNT_DERIVATION_MECHANISM.md  SWEEPING_SUBACCOUNTS_TO_USERVAULT_MAIN_PRINCIPAL.md  TESTING_GUIDE.md  TESTING_GUIDE_1.md  TESTING_GUIDE_2.md  TESTNET_DEBUGGING_GUIDE.md  canister-deployment-guideline.md
docs/logs/: TESTING_ATTEMPT.md  TESTING_ATTEMPT_10.md  TESTING_ATTEMPT_11.md  TESTING_ATTEMPT_12.md  TESTING_ATTEMPT_13.md  TESTING_ATTEMPT_14.md  TESTING_ATTEMPT_2.md  TESTING_ATTEMPT_3.md  TESTING_ATTEMPT_4.md  TESTING_ATTEMPT_5.md  TESTING_ATTEMPT_6.md  TESTING_ATTEMPT_7.md  TESTING_ATTEMPT_8.md  TESTING_ATTEMPT_9.md
script/: index.js
scripts/: README.md  deploy-mainnet.sh  prebuild.sh
src/icp_prototype_backend/: Cargo.toml  icp_prototype_backend.did  icp_prototype_backend.did.ts
src/icp_prototype_backend/src/: account_identifier.rs  hashof.rs  ledger.rs  lib.rs  memory.rs  mod.rs  tests.rs  types.rs
src/icp_prototype_frontend/assets/: .ic-assets.json5
src/icp_subaccount_indexer/: Cargo.toml  icp_prototype_backend.did.ts  icp_subaccount_indexer.did  icp_subaccount_indexer.did.ts
src/icp_subaccount_indexer/src/: hashof.rs  ledger.rs  lib.rs  memory.rs  tests.rs  types.rs
src/principal_converter/: Cargo.toml
src/principal_converter/src/: canister_id_to_bytes.rs  main.rs
