[workspace]
members = [
    "src/icp_subaccount_indexer",
    "src/principal_converter"
]
resolver = "2"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic (saves space)
strip = true        # Strip symbols from binary
