[package]
name = "icp_prototype_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
once_cell = "1.15"
tokio = { version = "1.0", features = ["full", "macros"] }

[dependencies]
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
crc32fast = "1.4.2"
hex = { version = "0.4.3", features = ["serde"] }

fmt = "0.1.0"
candid = "0.10.8"
ic-cdk = "0.12"
ic-cdk-timers = "0.6"
icrc-ledger-types = "0.1.5"
ic-ledger-types = "0.11.0"
ic-cdk-macros = "0.8.4"
ic-stable-structures = "0.6.3"
serde-hex = "0.1.0"
serde_bytes = "0.11.14"
serde_cbor = "0.11.2"
strum_macros = "0.26.2"
