[package]
name = "icp_prototype_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
once_cell = "1.15"
tokio = { version = "1.0", features = ["full", "macros"] }

[dependencies]
url = "2.5.2"
futures = "0.3"
serde = "1.0.197"
serde_json = "1.0"
sha2 = "0.10.8"
crc32fast = "1.4.0"
hex = { version = "0.4.3", features = ["serde"] }

candid = "0.10"
ic-cdk = "0.12"
ic-cdk-timers = "0.6"
icrc-ledger-types = "0.1.5"
ic-ledger-types = "0.10.0"
ic-cdk-macros = "0.8.4"
ic-stable-structures = "0.6.3"
serde_cbor = "0.11.2"
fmt = "0.1.0"
num-traits = "0.2.19"
serde-hex = "0.1.0"
strum_macros = "0.26.2"
serde_bytes = "0.11.14"

[features]
happy_path = []
sad_path = []